# lunasynth

./: CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml
assets/base_meshes/: NPB_final_adj_5mpp_surf_piece_1km_2_12.tif  NPC_final_adj_5mpp_surf_piece_2km_2_1.tif  flat_40m_10k.blend
assets/materials/: moon_shaders.blend
config/: lola_colors.txt  sun_scene.yaml
config/apollo_data/: lunar_sample_metadata.json
config/datasets/: ortho_minimal.yaml  ortho_nominal.yaml  ortho_nominal_v2.yaml  ortho_nominal_v3.yaml  ortho_scales.yaml  perspective_all.yaml  perspective_surface.yaml
config/polyhaven_textures/: coast_sand_02.json  rock_ground.json  rocky_trail.json  rocky_trail_02.json  seaside_rock.json
config/render_distributions/: grid_100m_xyz.yaml  grid_1km_xyz.yaml  grid_3km_xy_ortho.yaml  hover_render.yaml  landing_render.yaml  orbit_render.yaml  simple_ortho.yaml  surface_render.yaml
config/rendering/: fast_rendering.yaml  normal_rendering.yaml  quality_render.yaml
config/rock_distributions/: rocks_dense.yaml  rocks_sparse.yaml
docs/: fix_rocks.md  index.md  lunasynth_package.md  moon_ generation_diagram.drawio  moon_data_notes.md  moon_dem_table.html  regolith_generation.md  rock_table.html
docs/source/: conf.py  index.rst  lunasynth.rst  modules.rst
example_data/: moon_rock_field.csv  rockField.csv  rockField_20_005.csv  test_rock_field.csv  trajectory.csv  trajectory_scene.json
scripts/data_tools/: convert_obj_ply.sh  download_moon_data.sh  gdal_create.sh
scripts/installation/: add_license.sh  create_gh_pages.sh  install_dependencies.sh  setup_blender_addons.sh
scripts/pipelines/: craters.sh  generate_datasets.sh  ortho_scales_control.sh  rock_gen_render.sh  (+1 more)
test/: README.md  analyze_dems.py  copy_objects.py  dataset_analysis.ipynb  duplicate_objects.py  logger_englighten.py  particle_blender.py  show_tiff_gdal.py  show_tiff_rasterio.py  tiff_2_blenderMesh.py  tiff_2_blenderMesh_2.py  tiff_2_blenderMesh_3.py
tests/: README.md  test_blender_helper.py  test_combine_images.py  test_configuration_manager.py  test_create_rock_field.py  test_generate_enhanced_moon_terrain_dataset.py  test_load_rocks.py  test_process_rendering_cases.py  test_process_traj_cases.py  test_render_blendfile.py  test_scripts_pipelines.py  test_terrain_enhancement.py  test_visualize_cases_blender.py
(+112 files in other folders)
