[tool.poetry]
name = "lunasynth"
version = "0.8.0"
description = "Generate synthetic lunar images using Blender"
authors = ["Daniel Pastor <daniel.pastor.moreno@jpl.nasa.gov>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "lunasynth", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.10" 
bpy = "^4.1.0"
argcomplete = "^3.3.0"
scipy = "^1.13.0"
matplotlib = "^3.9.0"
openexr = "^3.2.4"
h5py = "^3.11.0"
opencv-python = "^4.9.0.80"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
opencv-python-headless = "^4.9.0.80"
trimesh = "^4.4.0"
pyglet = "<2"
rasterio = "^1.3.10"
plotly = "^5.22.0"
bs4 = "^0.0.2"
pyarrow = "^16.1.0"
humanize = "^4.9.0"
tabulate = "^0.9.0"
imageio = "^2.34.2"
numba = "^0.60.0"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
pytest-sugar = "^1.0.0"
sphinx = "^7.3.7"
pydata-sphinx-theme = "^0.15.4"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.4"

[tool.poetry.group.playground.dependencies]
streamlit = "^1.38.0"
panel = "^1.4.3"
pyside6 = "^6.7.0"

[tool.pytest.ini_options]
addopts = "--verbose --cov=src --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "W503"]
exclude = ["__pycache__", "build", "dist", "venv"]

[tool.ruff]
fix = true
line-length = 120
lint.select = [
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg
    "F",      # pyflakes errors
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "PGH",    # pygrep-hooks
    "PYI",    # flake8-pyi
    "RUF100", # unused noqa (yesqa)
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]
#    "D",      # pydocstyle

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_rock_field = "lunasynth.cli.create_rock_field:main"
load_rocks = "lunasynth.cli.load_rocks:main"
generate_dataset = "lunasynth.cli.generate_enhanced_moon_terrain_dataset:main"